# mlx_diffuser

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  README.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
concepts/: index.html
docs/: concepts.md  index.md  installation.md  quickstart.md  roadmap.md
docs/guides/: cli.md  flux.md  lora.md  ltx2.md  models.md  performance.md  schedulers.md  sdxl.md  training.md  trellis.md  wan.md
docs/reference/: models.md  pipelines.md  schedulers.md  training.md
examples/: benchmark.py  flux_text_to_image.py  ltx2_text_to_video.py  sdxl_text_to_image.py  text_to_video.py  wan_text_to_video.py
guides/cli/: index.html
guides/flux/: index.html
guides/lora/: index.html
guides/ltx2/: index.html
guides/models/: index.html
guides/performance/: index.html
guides/schedulers/: index.html
guides/sdxl/: index.html
guides/training/: index.html
guides/trellis/: index.html
guides/wan/: index.html
installation/: index.html
quickstart/: index.html
reference/models/: index.html
reference/pipelines/: index.html
reference/schedulers/: index.html
reference/training/: index.html
roadmap/: index.html
scripts/: bench_wan.py  check_wan_transformer.py  check_wan_vae.py
search/: search_index.json
src/mlx_diffuser/: __init__.py  caching.py  configuration.py  hub.py  modeling.py  quantization.py  utils.py  version.py
src/mlx_diffuser/cli/: __init__.py  __main__.py
src/mlx_diffuser/converters/: __init__.py  base.py  flux.py  ltx2.py  sdxl.py  trellis.py  umt5.py  wan.py
src/mlx_diffuser/kernels/: __init__.py  sparse.py
src/mlx_diffuser/layers/: __init__.py  attention.py  blocks.py  rope.py  sparse.py  trellis.py  trellis_sparse.py  vae3d_blocks.py  video_blocks.py
src/mlx_diffuser/models/: __init__.py  autoencoder_kl.py  autoencoder_kl_ltx2.py  autoencoder_kl_sd.py  autoencoder_kl_video.py  autoencoder_kl_wan.py  clip_text.py  dinov2.py  flux_transformer.py  gemma3.py  ltx2_audio.py  ltx2_connectors.py  ltx2_transformer.py  t5.py  trellis.py  trellis_gaussian.py  trellis_slat.py  umt5.py  unet_sdxl.py  video_dit.py  wan_transformer.py
src/mlx_diffuser/pipelines/: __init__.py  class_conditional.py  flux.py  ltx2.py  sdxl.py  text_to_video.py  trellis.py  wan.py
src/mlx_diffuser/schedulers/: __init__.py  base.py  ddim.py  euler.py  flow_match_euler.py  trellis_flow.py
src/mlx_diffuser/training/: __init__.py
src/mlx_diffusion/: __init__.py  hub.py  modeling.py  perf.py  quantization.py  utils.py
src/mlx_diffusion/cli/: __init__.py  __main__.py
src/mlx_diffusion/layers/: __init__.py  attention.py  blocks.py  embeddings.py  normalization.py  unet_blocks.py
src/mlx_diffusion/lora/: __init__.py  lora.py
src/mlx_diffusion/models/: __init__.py  autoencoder_kl.py  dit.py  unet2d.py
src/mlx_diffusion/pipelines/: base.py  class_conditional.py
src/mlx_diffusion/schedulers/: __init__.py  base.py  ddim.py  ddpm.py  euler.py  flow_match_euler.py
src/mlx_diffusion/training/: data.py  ema.py  losses.py  trainer.py
tests/: test_caching.py  test_cli.py  test_flux.py  test_foundation.py  test_lora.py  test_ltx2.py  test_models.py  test_perf.py  test_pipelines.py  test_schedulers.py  test_sdxl.py  test_training.py  test_trellis.py  test_unet_vae.py  test_video_models.py  test_wan_transformer.py  test_wan_vae.py
