[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "mlx-diffuser"
dynamic = ["version"]
description = "Diffusion training and sampling on Apple silicon with MLX."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Amirhossein", email = "arazlighi@gmail.com" },
]
keywords = [
  "mlx",
  "diffusion",
  "flow-matching",
  "apple-silicon",
  "metal",
  "dit",
  "stable-diffusion",
  "generative-ai",
  "image-generation",
  "3d-generation",
  "trellis",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]
dependencies = [
  "mlx>=0.31.0",
  "numpy>=1.26.0",
  "pillow>=11.0.0",
]

[project.urls]
Homepage = "https://github.com/AmirHossein-razlighi/mlx_diffuser"
Documentation = "https://AmirHossein-razlighi.github.io/mlx_diffuser/"
Repository = "https://github.com/AmirHossein-razlighi/mlx_diffuser"
Issues = "https://github.com/AmirHossein-razlighi/mlx_diffuser/issues"
Changelog = "https://github.com/AmirHossein-razlighi/mlx_diffuser/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.8.0",
  "mypy>=1.13.0",
]
hub = [
  "huggingface_hub>=0.25.0",
]
trellis = [
  "huggingface_hub>=0.25.0",
]
docs = [
  "mkdocs-material>=9.5.0",
  "mkdocstrings[python]>=0.27.0",
]

[project.scripts]
mlx-diffuser = "mlx_diffuser.cli:main"

[tool.hatch.version]
path = "src/mlx_diffuser/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/mlx_diffuser"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B"]

[tool.mypy]
python_version = "3.11"
files = ["src/mlx_diffuser"]
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false
warn_unused_ignores = false
# Lenient by design: catch import/name errors without fighting MLX's dynamic API.
